--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,16 @@
 src = "src"
 out = "out"
 libs = ["lib"]
+solc_version = "0.8.24"
+evm_version = "shanghai"
+optimizer = true
+optimizer_runs = 2000
+remappings = ["@openzeppelin/=node_modules/@openzeppelin/contracts",]
+
+[rpc_endpoints]
+blast_sepolia = "${BLAST_SEPOLIA_RPC_URL}"
+
+[etherscan]
+sepolia = { key = "${ETHERSCAN_API_KEY}" }
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
