--- a/foundry.toml
+++ b/foundry.toml
@@ -9,11 +9,12 @@ optimizer_runs = 2000
 remappings = ["@openzeppelin/=node_modules/@openzeppelin/contracts",]
 
 [rpc_endpoints]
+polygon_amoy = "${POLYGON_AMOY_RPC_URL}"
 blast_sepolia = "${BLAST_SEPOLIA_RPC_URL}"
-amoy_polygon = "${AMOY_POLYGON_RPC_URL}"
 scroll_sepolia = "${SCROLL_SEPOLIA_RPC_URL}"
+ethereum_sepolia = "${ETHEREUM_SEPOLIA_RPC_URL}"
 
-[etherscan]
-sepolia = { key = "${ETHERSCAN_API_KEY}" }
+#[etherscan]
+#sepolia = { key = "${ETHERSCAN_API_KEY}" }
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
